--- a/bootstrap4-charming.css
+++ b/bootstrap4-charming.css
@@ -75,10 +75,9 @@ body {
   .carousel{
     background-color: #353844;
   }
-
   .carousel-inner img {
     margin: auto;
-    width: 800px;
+    width: 900px;
   }
   .map-container-6{
     overflow:hidden;
@@ -3816,7 +3815,7 @@ input[type="button"].btn-block {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0.5rem 1rem; }
+  padding: 0px 0px; }
   .navbar > .container,
   .navbar > .container-fluid {
     display: -webkit-box;
@@ -4122,9 +4121,9 @@ input[type="button"].btn-block {
     display: none; }
 
 .navbar-light .navbar-brand {
-  color: #4c4c4c; }
+  color: #0e173a; }
   .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-    color: #4c4c4c; }
+    color: #0e173a; }
 
 .navbar-light .navbar-nav .nav-link {
   color: #343434; }
@@ -4137,7 +4136,7 @@ input[type="button"].btn-block {
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #4c4c4c; }
+  color: #0e173a; }
 
 .navbar-light .navbar-toggler {
   color: #343434;
@@ -4658,9 +4657,10 @@ input[type="button"].btn-block {
             box-shadow: 0 0 0 0.2rem rgba(53, 56, 68, 0.5); }
 
 .jumbotron {
-  padding: 2rem 1rem;
-  margin-bottom: 2rem;
-  background-color: #e9ecef;
+  padding: 2px 4px;
+  margin-bottom: 1rem;
+  color: white;
+  background-color: #353844;
   border-radius: 5px; }
   @media (min-width: 576px) {
     .jumbotron {
@@ -5957,7 +5957,7 @@ button.bg-danger:focus {
   background-color: #e90326 !important; }
 
 .bg-light {
-  background-color: #e5e5e5 !important; }
+  background-color: #55965f !important; }
 
 a.bg-light:hover, a.bg-light:focus,
 button.bg-light:hover,
